[project]
name = "open-science-rag"
version = "0.1.0"
description = "A small implementation of a RAG system that uses OpenAlex API to provide a better search of scientific papers"
authors = [
    {name = "Ahmadov Avazagha",email = "ahmadov.avazagha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "pyalex (>=0.18,<0.19)",
    "langchain (>=1.0.3,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
